Changed some colours and the readme