@@ -1,2 +1,3 @@
 # comp16412-coursework-2-base
-
+# to compile use "javac -d out/ --module-path ./lib/ --add-modules=javafx.controls -cp src/ src/MazeApplication.java"
+# to run use "java --class-path out/ --module-path ./lib/ --add-modules=javafx.controls MazeApplication"
